# cl2c

./: .gitignore  CMakeLists.txt  README.md
src/: Constants.h  Main.cpp  OpenCLKernelTranslator.cpp  OpenCLKernelTranslator.h  UserConfig.cpp  Utils.cpp  Utils.h
